--- a/catalogue.html
+++ b/catalogue.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./styles/catalogue.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/cart.css">
-    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
 
 </head>
 
@@ -45,9 +45,9 @@
         </div>
         <nav>
             <ul>
-                <li><button onclick="toggleSearch()"><img src="/images/ico_menu-search.svg" alt=""></button></li>
-                <li><a href=""><img src="/images/ico_menu-account.svg" alt=""></a></li>
-                <li><a href="cart.html"><img src="/images/ico_menu-cart.svg"alt=""></a></li>
+                <li><button onclick="toggleSearch()"><img src="images/ico_menu-search.svg" alt=""></button></li>
+                <li><a href=""><img src="images/ico_menu-account.svg" alt=""></a></li>
+                <li><a href="cart.html"><img src="images/ico_menu-cart.svg"alt=""></a></li>
                 <div class="menuhover">
                     <span onclick="openNav()">
                         <ai><a class="menu">MENU<alt=""></a></li>
@@ -69,7 +69,7 @@
     <span class="cart-section">
         
         <div>
-            <img src="/images/icon-drawer.png" alt="">
+            <img src="images/icon-drawer.png" alt="">
             <p class="cart-number">1</p>
         </div>
         
@@ -89,7 +89,7 @@
 
         <div class="cart-small-grid">
             <div>
-                <a href="product.html"><img class=cartslide-img src="/images/product-photograph-4.png" alt=""></a>
+                <a href="product.html"><img class=cartslide-img src="images/product-photograph-4.png" alt=""></a>
                 <div class="cartslide-quantity"> 
                     <button class="quantity-button" onclick="dec('amount')">-</button>
                     <input class="quantity-input" name="amount" type="number" value="1">
@@ -170,7 +170,7 @@
         <div class="product-cards">
  
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph-1.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph-1.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph-4.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph-4.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -238,7 +238,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph-3.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph-3.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -272,7 +272,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph2.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph2.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -306,7 +306,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph-1.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph-1.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -340,7 +340,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph-4.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph-4.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -374,7 +374,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph-3.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph-3.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -408,7 +408,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph2.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph2.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -442,7 +442,7 @@
                 </div>
             </div>
             <div class="product-card">
-                <div class="product-card-img"><a href="product.html"><img src="/images/product-photograph-4.png" alt="table" style="width:100%"></a></div>
+                <div class="product-card-img"><a href="product.html"><img src="images/product-photograph-4.png" alt="table" style="width:100%"></a></div>
                 <span class="save-banner">Save $200.00</span>
                 <div class="card-info">
                     <a href="product.html" style="text-decoration:none" ><p class="card-title">Tasmania Mahogany Drawer</p></a>
@@ -498,7 +498,7 @@
                     <h3>Stay In The Loop</h3>
                     <div class="signuplayout">
                         <form>
-                            <img src="/images/ico-newsletter.png" alt="">
+                            <img src="images/ico-newsletter.png" alt="">
                             <input type="newsbox" placeholder="Email address" >
                         </form>
                         <span class="signupbtn" style="vertical-align: middle">SIGN UP</span>
@@ -508,21 +508,21 @@
                 <div class="social">
                     <h3>Follow Us</h3>
                     <ul>
-                        <a href=""><li><img src="/images/facebook.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/instagram.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/pinterest.svg" alt=""></li></a>
-                        <a href=""><li><img src="/images/twitter.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/facebook.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/instagram.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/pinterest.svg" alt=""></li></a>
+                        <a href=""><li><img src="images/twitter.svg"  alt=""></li></a>
                     </ul>
                 </div>
             </section>
             <hr class="divider-2">
             <div class="payfooter">
                 <ul>
-                    <li><img src="/images/ico_amex.svg" alt=""></li>
-                    <li><img src="/images/ico_mastercard.svg" alt=""></li>
-                    <li><img src="/images/ico_visa.svg" alt=""></li>
-                    <li><img src="/images/ico_paypal.svg" alt=""></li>
-                    <li><img src="/images/ico_zippay_3.svg" alt=""></li>
+                    <li><img src="images/ico_amex.svg" alt=""></li>
+                    <li><img src="images/ico_mastercard.svg" alt=""></li>
+                    <li><img src="images/ico_visa.svg" alt=""></li>
+                    <li><img src="images/ico_paypal.svg" alt=""></li>
+                    <li><img src="images/ico_zippay_3.svg" alt=""></li>
                 </ul>
             </div>
             <h4>© 2022 Black Orpheus Emporium</h4>
@@ -530,10 +530,10 @@
 
     </footer>
 
-<script src="/scripts/navbar.js"></script>
+<script src="scripts/navbar.js"></script>
 
-<script src="/scripts/refine.js"></script>
-<script src="/scripts/cart.js"></script>
+<script src="scripts/refine.js"></script>
+<script src="scripts/cart.js"></script>
 
 
 </body>
