--- a/confirmation.html
+++ b/confirmation.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
-    <script src="/scripts/navbar.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
+    <script src="scripts/navbar.js"></script>
 
 
 </head>
@@ -42,9 +42,9 @@
         </div>
         <nav>
             <ul>
-                <li><button onclick="toggleSearch()"><img src="/images/ico_menu-search.svg" alt=""></button></li>
-                <li><a href=""><img src="/images/ico_menu-account.svg" alt=""></a></li>
-                <li><a href="cart.html"><img src="/images/ico_menu-cart.svg"alt=""></a></li>
+                <li><button onclick="toggleSearch()"><img src="images/ico_menu-search.svg" alt=""></button></li>
+                <li><a href=""><img src="images/ico_menu-account.svg" alt=""></a></li>
+                <li><a href="cart.html"><img src="images/ico_menu-cart.svg"alt=""></a></li>
                 <div class="menuhover">
                     <span onclick="openNav()">
                         <ai><a class="menu">MENU<alt=""></a></li>
@@ -66,7 +66,7 @@
     <span class="cart-section">
         
         <div>
-            <img src="/images/icon-drawer.png" alt="">
+            <img src="images/icon-drawer.png" alt="">
             <p class="cart-number">1</p>
         </div>
         
@@ -85,7 +85,7 @@
 
         <div class="cart-small-grid">
             <div>
-                <a href="product.html"><img class=cartslide-img src="/images/product-photograph-4.png" alt=""></a>
+                <a href="product.html"><img class=cartslide-img src="images/product-photograph-4.png" alt=""></a>
                 <div class="cartslide-quantity"> 
                     <button class="quantity-button" onclick="dec('amount')">-</button>
                     <input class="quantity-input" name="amount" type="number" value="1">
@@ -116,7 +116,7 @@
       </div>
 
     <main>
-       <div class="confirmationwidth"><img class="confirmation-bg" src="/images/confirmation-bg.jpg" alt=""></div>
+       <div class="confirmationwidth"><img class="confirmation-bg" src="images/confirmation-bg.jpg" alt=""></div>
        <span class="confirmcard">
             <div class="confirmtext">
                 <h1 style="margin-bottom: -10px; margin-top: 70px;">Thank You!</h1>
@@ -135,7 +135,7 @@
                     <h3>Stay In The Loop</h3>
                     <div class="signuplayout">
                         <form>
-                            <img src="/images/ico-newsletter.png" alt="">
+                            <img src="images/ico-newsletter.png" alt="">
                             <input type="newsbox" placeholder="Email address" >
                         </form>
                         <span class="signupbtn" style="vertical-align: middle">SIGN UP</span>
@@ -145,21 +145,21 @@
                 <div class="social">
                     <h3>Follow Us</h3>
                     <ul>
-                        <a href=""><li><img src="/images/facebook.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/instagram.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/pinterest.svg" alt=""></li></a>
-                        <a href=""><li><img src="/images/twitter.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/facebook.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/instagram.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/pinterest.svg" alt=""></li></a>
+                        <a href=""><li><img src="images/twitter.svg"  alt=""></li></a>
                     </ul>
                 </div>
             </section>
             <hr class="divider-2">
             <div class="payfooter">
                 <ul>
-                    <li><img src="/images/ico_amex.svg" alt=""></li>
-                    <li><img src="/images/ico_mastercard.svg" alt=""></li>
-                    <li><img src="/images/ico_visa.svg" alt=""></li>
-                    <li><img src="/images/ico_paypal.svg" alt=""></li>
-                    <li><img src="/images/ico_zippay_3.svg" alt=""></li>
+                    <li><img src="images/ico_amex.svg" alt=""></li>
+                    <li><img src="images/ico_mastercard.svg" alt=""></li>
+                    <li><img src="images/ico_visa.svg" alt=""></li>
+                    <li><img src="images/ico_paypal.svg" alt=""></li>
+                    <li><img src="images/ico_zippay_3.svg" alt=""></li>
                 </ul>
             </div>
             <h4>© 2022 Black Orpheus Emporium</h4>
