--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/cart.css">
-    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
 </head>
 <body" >
     <!-- Represents content of the document -->
@@ -42,9 +42,9 @@
         </div>
         <nav>
             <ul>
-                <li><button onclick="toggleSearch()"><img src="/images/ico_menu-search.svg" alt=""></button></li>
-                <li><a href=""><img src="/images/ico_menu-account.svg" alt=""></a></li>
-                <li><a href="cart.html"><img src="/images/ico_menu-cart.svg"alt=""></a></li>
+                <li><button onclick="toggleSearch()"><img src="images/ico_menu-search.svg" alt=""></button></li>
+                <li><a href=""><img src="images/ico_menu-account.svg" alt=""></a></li>
+                <li><a href="cart.html"><img src="images/ico_menu-cart.svg"alt=""></a></li>
                 <div class="menuhover">
                     <span onclick="openNav()">
                         <ai><a class="menu">MENU<alt=""></a></li>
@@ -66,7 +66,7 @@
     <span class="cart-section">
         
         <div>
-            <img src="/images/icon-drawer.png" alt="">
+            <img src="images/icon-drawer.png" alt="">
             <p class="cart-number">1</p>
         </div>
         
@@ -85,7 +85,7 @@
 
         <div class="cart-small-grid">
             <div>
-                <a href="product.html"><img class=cartslide-img src="/images/product-photograph-4.png" alt=""></a>
+                <a href="product.html"><img class=cartslide-img src="images/product-photograph-4.png" alt=""></a>
                 <div class="cartslide-quantity"> 
                     <button class="quantity-button" onclick="dec('amount')">-</button>
                     <input class="quantity-input" name="amount" type="number" value="1">
@@ -150,7 +150,7 @@
                     <h3>Stay In The Loop</h3>
                     <div class="signuplayout">
                         <form>
-                            <img src="/images/ico-newsletter.png" alt="">
+                            <img src="images/ico-newsletter.png" alt="">
                             <input type="newsbox" placeholder="Email address" >
                         </form>
                         <span class="signupbtn" style="vertical-align: middle">SIGN UP</span>
@@ -160,21 +160,21 @@
                 <div class="social">
                     <h3>Follow Us</h3>
                     <ul>
-                        <a href=""><li><img src="/images/facebook.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/instagram.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/pinterest.svg" alt=""></li></a>
-                        <a href=""><li><img src="/images/twitter.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/facebook.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/instagram.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/pinterest.svg" alt=""></li></a>
+                        <a href=""><li><img src="images/twitter.svg"  alt=""></li></a>
                     </ul>
                 </div>
             </section>
             <hr class="divider-2">
             <div class="payfooter">
                 <ul>
-                    <li><img src="/images/ico_amex.svg" alt=""></li>
-                    <li><img src="/images/ico_mastercard.svg" alt=""></li>
-                    <li><img src="/images/ico_visa.svg" alt=""></li>
-                    <li><img src="/images/ico_paypal.svg" alt=""></li>
-                    <li><img src="/images/ico_zippay_3.svg" alt=""></li>
+                    <li><img src="images/ico_amex.svg" alt=""></li>
+                    <li><img src="images/ico_mastercard.svg" alt=""></li>
+                    <li><img src="images/ico_visa.svg" alt=""></li>
+                    <li><img src="images/ico_paypal.svg" alt=""></li>
+                    <li><img src="images/ico_zippay_3.svg" alt=""></li>
                 </ul>
             </div>
             <h4>© 2022 Black Orpheus Emporium</h4>
@@ -182,7 +182,7 @@
 
     </footer>
 
-<script src="/scripts/navbar.js"></script>
-<script src="/scripts/cart.js"></script>
+<script src="scripts/navbar.js"></script>
+<script src="scripts/cart.js"></script>
 </body>
 </html>
