--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/cart.css">
-    <link rel="icon" type="image/x-icon" href="/images/icon.ico">
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
 
 </head>
 <body>
@@ -41,9 +41,9 @@
         </div>
         <nav>
             <ul>
-                <li><button onclick="toggleSearch()"><img src="/images/ico_menu-search.svg" alt=""></button></li>
-                <li><a href=""><img src="/images/ico_menu-account.svg" alt=""></a></li>
-                <li><a href="cart.html"><img src="/images/ico_menu-cart.svg"alt=""></a></li>
+                <li><button onclick="toggleSearch()"><img src="images/ico_menu-search.svg" alt=""></button></li>
+                <li><a href=""><img src="images/ico_menu-account.svg" alt=""></a></li>
+                <li><a href="cart.html"><img src="images/ico_menu-cart.svg"alt=""></a></li>
                 <div class="menuhover">
                     <span onclick="openNav()">
                         <ai><a class="menu">MENU<alt=""></a></li>
@@ -64,7 +64,7 @@
     </div>
     <main>
         <!-- background cart image -->
-        <div><img class="cart-bg" src="/images/cart-bg.jpg" alt=""></div>
+        <div><img class="cart-bg" src="images/cart-bg.jpg" alt=""></div>
         
         <div class="back-span" style="padding: 0 0 0 100px;margin-top:50px;">
 
@@ -92,7 +92,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><a href="product.html"><img src="/images/product-photograph-4.png" alt=""></a></td>
+                        <td><a href="product.html"><img src="images/product-photograph-4.png" alt=""></a></td>
                         <td>
                             <h3 style="margin-bottom: -10px; margin-top: 0px;">Tasmania Mahogany Drawer</h3>
                             <br>6 Drawer Timber Coffee Table.
@@ -135,7 +135,7 @@
                     <h3>Stay In The Loop</h3>
                     <div class="signuplayout">
                         <form>
-                            <img src="/images/ico-newsletter.png" alt="">
+                            <img src="images/ico-newsletter.png" alt="">
                             <input type="newsbox" placeholder="Email address" >
                         </form>
                         <span class="signupbtn" style="vertical-align: middle">SIGN UP</span>
@@ -145,29 +145,29 @@
                 <div class="social">
                     <h3>Follow Us</h3>
                     <ul>
-                        <a href=""><li><img src="/images/facebook.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/instagram.svg"  alt=""></li></a>
-                        <a href=""><li><img src="/images/pinterest.svg" alt=""></li></a>
-                        <a href=""><li><img src="/images/twitter.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/facebook.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/instagram.svg"  alt=""></li></a>
+                        <a href=""><li><img src="images/pinterest.svg" alt=""></li></a>
+                        <a href=""><li><img src="images/twitter.svg"  alt=""></li></a>
                     </ul>
                 </div>
             </section>
             <hr class="divider-2">
             <div class="payfooter">
                 <ul>
-                    <li><img src="/images/ico_amex.svg" alt=""></li>
-                    <li><img src="/images/ico_mastercard.svg" alt=""></li>
-                    <li><img src="/images/ico_visa.svg" alt=""></li>
-                    <li><img src="/images/ico_paypal.svg" alt=""></li>
-                    <li><img src="/images/ico_zippay_3.svg" alt=""></li>
+                    <li><img src="images/ico_amex.svg" alt=""></li>
+                    <li><img src="images/ico_mastercard.svg" alt=""></li>
+                    <li><img src="images/ico_visa.svg" alt=""></li>
+                    <li><img src="images/ico_paypal.svg" alt=""></li>
+                    <li><img src="images/ico_zippay_3.svg" alt=""></li>
                 </ul>
             </div>
             <h4>© 2022 Black Orpheus Emporium</h4>
         </section>
 
     </footer>
-<script src="/scripts/cart.js"></script>
-<script src="/scripts/navbar.js"></script>
+<script src="scripts/cart.js"></script>
+<script src="scripts/navbar.js"></script>
 
 </body>
 </html>
